# sentence-transformer-docker

./: Dockerfile  README.md  pyproject.toml
app/: main.py
