[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tharak-N <tharak.n@innovatily.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
llama-index = "^0.12.8"
llama-index-embeddings-huggingface = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
